v10/docs/ModelsWorkflowDenialRequest.md
# ModelsWorkflowDenialRequest

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Comment** | Pointer to **string** |  | [optional] 
**CertificateRequestIds** | Pointer to **[]int32** |  | [optional] 

## Methods

### NewModelsWorkflowDenialRequest

`func NewModelsWorkflowDenialRequest() *ModelsWorkflowDenialRequest`

NewModelsWorkflowDenialRequest instantiates a new ModelsWorkflowDenialRequest object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsWorkflowDenialRequestWithDefaults

`func NewModelsWorkflowDenialRequestWithDefaults() *ModelsWorkflowDenialRequest`

NewModelsWorkflowDenialRequestWithDefaults instantiates a new ModelsWorkflowDenialRequest object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetComment

`func (o *ModelsWorkflowDenialRequest) GetComment() string`

GetComment returns the Comment field if non-nil, zero value otherwise.

### GetCommentOk

`func (o *ModelsWorkflowDenialRequest) GetCommentOk() (*string, bool)`

GetCommentOk returns a tuple with the Comment field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetComment

`func (o *ModelsWorkflowDenialRequest) SetComment(v string)`

SetComment sets Comment field to given value.

### HasComment

`func (o *ModelsWorkflowDenialRequest) HasComment() bool`

HasComment returns a boolean if a field has been set.

### GetCertificateRequestIds

`func (o *ModelsWorkflowDenialRequest) GetCertificateRequestIds() []int32`

GetCertificateRequestIds returns the CertificateRequestIds field if non-nil, zero value otherwise.

### GetCertificateRequestIdsOk

`func (o *ModelsWorkflowDenialRequest) GetCertificateRequestIdsOk() (*[]int32, bool)`

GetCertificateRequestIdsOk returns a tuple with the CertificateRequestIds field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCertificateRequestIds

`func (o *ModelsWorkflowDenialRequest) SetCertificateRequestIds(v []int32)`

SetCertificateRequestIds sets CertificateRequestIds field to given value.

### HasCertificateRequestIds

`func (o *ModelsWorkflowDenialRequest) HasCertificateRequestIds() bool`

HasCertificateRequestIds returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


